--- a/Notebooks/ActivationsToVisual.ipynb
+++ b/Notebooks/ActivationsToVisual.ipynb
@@ -61,15 +61,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e9fa7d4e-782e-425d-8f4a-cdbf6b800eca"
+        "outputId": "32b476d0-3af0-4abb-b9b2-ce5bd51cefc3"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
-            "activations  models\n"
+            "Mounted at /content/drive\n",
+            "activations  models  visualizations\n"
           ]
         }
       ],
@@ -92,6 +92,34 @@
     {
       "cell_type": "code",
       "source": [
+        "!pip install -q git+https://github.com/wazeerzulfikar/transformers.git"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iwAJXh2Frzpf",
+        "outputId": "ff43fd3c-9730-4699-a756-8037637f5acb"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
+            "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
+            "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m224.5/224.5 kB\u001b[0m \u001b[31m18.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.8/7.8 MB\u001b[0m \u001b[31m104.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Building wheel for transformers (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import numpy as np\n",
         "import cv2\n",
         "import matplotlib.pyplot as plt\n",
@@ -101,12 +129,13 @@
         "import matplotlib.colors as mcolors\n",
         "from matplotlib.colors import LogNorm\n",
         "import torch\n",
-        "from tqdm import tqdm "
+        "from tqdm import tqdm \n",
+        "import transformers"
       ],
       "metadata": {
         "id": "xpsgG7onhFTw"
       },
-      "execution_count": 29,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -132,7 +161,7 @@
       "metadata": {
         "id": "DPgYNXBF4DIH"
       },
-      "execution_count": 30,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -159,41 +188,44 @@
         "\n",
         "  #iterate through hidden states of all tokens \n",
         "  for token_id, token_hidden_states in tqdm(enumerate(hidden_states)):\n",
-        "    # current_token = tokenized_output_response[token_id]\n",
-        "    current_token_string = output_response[token_id]\n",
-        "    # print(\"Token ID: \"+str(token_id)+\"\\t Token Value: \" + str(current_token), \"\\t Token String: '\" + str(current_token_string)+\"'\")\n",
+        "    # Disregard first hidden state (which inclued all input? tokens)\n",
+        "    if token_id > 0:\n",
+        "      # current_token = tokenized_output_response[token_id]\n",
+        "      current_token_string = output_response[token_id]\n",
+        "      # print(\"Token ID: \"+str(token_id)+\"\\t Token Value: \" + str(current_token), \"\\t Token String: '\" + str(current_token_string)+\"'\")\n",
         "\n",
-        "    # Initialize an empty dictionary to store activations\n",
-        "    activations = []\n",
+        "      # Initialize an empty dictionary to store activations\n",
+        "      activations = []\n",
         "\n",
-        "    # iterate through all layers for each token's hidden states\n",
-        "    for layer_id, layers in enumerate(token_hidden_states):\n",
-        "      # print(\"Layer: \"+str(layer_id))\n",
-        "      for beam_id, beams in enumerate(layers):\n",
-        "        # print(\"Beam: \"+str(beam_id))\n",
-        "        for token_activation_id, token_activations in enumerate(beams):\n",
-        "          token_activations_np = token_activations.numpy()  # Detach and convert to NumPy array\n",
-        "          activations.extend(token_activations_np)\n",
+        "      # iterate through all layers for each token's hidden states\n",
+        "      for layer_id, layers in enumerate(token_hidden_states):\n",
+        "        # print(\"Layer: \"+str(layer_id))\n",
+        "        for beam_id, beams in enumerate(layers):\n",
+        "          # print(\"Beam: \"+str(beam_id))\n",
+        "          for token_activation_id, token_activations in enumerate(beams):\n",
+        "            # print(token_activations.shape)\n",
+        "            token_activations_np = token_activations.numpy()  # Detach and convert to NumPy array\n",
+        "            activations.extend(token_activations_np)\n",
         "\n",
-        "    # Determine the size of the square image\n",
-        "    image_size = int(np.ceil(np.sqrt(len(activations))))\n",
+        "      # Determine the size of the square image\n",
+        "      image_size = int(np.ceil(np.sqrt(len(activations))))\n",
         "\n",
-        "    # Create an empty square image with pixel values set to zero\n",
-        "    img = np.zeros((image_size, image_size), dtype=np.uint8)\n",
+        "      # Create an empty square image with pixel values set to zero\n",
+        "      img = np.zeros((image_size, image_size), dtype=np.uint8)\n",
         "\n",
-        "    # Fill in the image with the normalized activation values\n",
-        "    img.flat[:len(activations)] = activations\n",
+        "      # Fill in the image with the normalized activation values\n",
+        "      img.flat[:len(activations)] = activations\n",
         "\n",
-        "    # Add the image to the all_images list\n",
-        "    all_images.append(img)\n",
+        "      # Add the image to the all_images list\n",
+        "      all_images.append(img)\n",
         "\n",
-        "    # Update the global vmin and vmax\n",
-        "    vmin_token = np.min(activations)\n",
-        "    if vmin_token < vmin:\n",
-        "      vmin = vmin_token\n",
-        "    vmax_token = np.max(activations)\n",
-        "    if vmax_token > vmax:\n",
-        "      vmax = vmax_token\n",
+        "      # Update the global vmin and vmax\n",
+        "      vmin_token = np.min(activations)\n",
+        "      if vmin_token < vmin:\n",
+        "        vmin = vmin_token\n",
+        "      vmax_token = np.max(activations)\n",
+        "      if vmax_token > vmax:\n",
+        "        vmax = vmax_token\n",
         "\n",
         "  #Set log norm based on global max and min activations values\n",
         "  log_norm = LogNorm(vmin=vmin, vmax=vmax)\n",
@@ -210,12 +242,12 @@
         "\n",
         "  # Create the animation\n",
         "  fig = plt.figure(figsize=(20, 20))\n",
-        "  ani = FuncAnimation(fig, update, frames=len(output_response), interval=250)\n",
+        "  ani = FuncAnimation(fig, update, frames=len(output_response)-1, interval=250)\n",
         "\n",
         "  # Save the animation as an MP4 file\n",
         "  output_file = data[\"prompt\"].replace(' ', '_')+\".mp4\"\n",
         "  output_path = \"/content/drive/MyDrive/llm/visualizations/\"+str(output_file)\n",
-        "  ani.save(output_file, dpi=100, writer=\"ffmpeg\")\n",
+        "  ani.save(output_path, dpi=100, writer=\"ffmpeg\")\n",
         "\n",
         "  # Set the matplotlib backend back to the default\n",
         "  matplotlib.use(\"module://ipykernel.pylab.backend_inline\")\n",
@@ -229,7 +261,7 @@
       "metadata": {
         "id": "adsI_rpAO3Cp"
       },
-      "execution_count": 33,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -251,15 +283,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7L35qD3yi8qi",
-        "outputId": "deff1f76-2242-43ca-d756-bd7c9416dee1"
+        "outputId": "c79f307f-7c9c-4467-9a68-1722decd3a04"
       },
-      "execution_count": 34,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "10it [00:02,  4.59it/s]\n"
+            "10it [00:00, 27.98it/s]\n"
           ]
         },
         {
