--- a/pipeline/experimental_pipeline.ipynb
+++ b/pipeline/experimental_pipeline.ipynb
@@ -83,9 +83,8 @@
    "outputs": [],
    "source": [
     "# load llm\n",
-    "model_path = '/home/gridsan/wzulfikar/models/llama-30b-hf'\n",
-    "# lora_model_path = '/home/gridsan/wzulfikar/models/alpaca-lora-13b' #chansung\n",
-    "lora_model_path = None\n",
+    "model_path = '/home/gridsan/wzulfikar/models/vicuna-13b-v1.3'\n",
+    "lora_model_path = '/home/gridsan/wzulfikar/models/alpaca-lora-13b'\n",
     "\n",
     "tokenizer, model = utils.load_llm(model_path, lora_model_path)"
    ]
@@ -105,24 +104,9 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Response: ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇  ⁇\n",
-      "Processing chain_35\n",
-      "Prompt: Question: Samuel took 30 minutes to finish his homework while Sarah took 1.3 hours to finish it. How many minutes faster did Samuel finish his homework than Sarah?\n",
-      " Let's think step by step\n",
-      " Since there are 60 minutes in 1 hour, then 1.3 hours is equal to 1.3 x 60 = 78 minutes.\n",
-      "Thus, Samuel is 78 – 30 = 48 minutes faster than Sarah.\n",
-      " Answer: The answer is 48; \n",
-      " Questions: Carter usually bakes 6 cheesecakes, 5 muffins, and 8 red velvet cakes regularly for a week. For this week he was able to bake triple the number of cheesecakes, muffins, chocolate moist cakes, and red velvet cakes. How much more cakes was Carter able to bake for this week?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dataset_dir = '/home/gridsan/wzulfikar/activations/cot_30b/'\n",
+    "dataset_dir = '/home/gridsan/wzulfikar/activations/cot_vicuna_13b/'\n",
     "\n",
     "cot_csv_file = opj(dataset_dir, 'prompt_chain.csv')\n",
     "no_cot_csv_file = opj(dataset_dir, 'prompt_no_chain.csv')\n",
@@ -147,7 +131,7 @@
    "outputs": [],
    "source": [
     "aggr_strategy = 'avg'\n",
-    "# utils.process_activations([cot_csv_file, no_cot_csv_file], raw_activations_dir, aggr_strategy=aggr_strategy)"
+    "utils.process_activations([cot_csv_file, no_cot_csv_file], raw_activations_dir, aggr_strategy=aggr_strategy)"
    ]
   },
   {
@@ -169,8 +153,8 @@
     "clusters_dir = opj(dataset_dir, 'clusters')\n",
     "n_clusters = 16\n",
     "\n",
-    "# utils.cluster_activations_kmeans(activations_df_file, clusters_dir, cluster_kwargs={'n_clusters': n_clusters}, \n",
-    "#                                  calculate_significance=True)\n"
+    "utils.cluster_activations_kmeans(activations_df_file, clusters_dir, cluster_kwargs={'n_clusters': n_clusters}, \n",
+    "                                 calculate_significance=True)"
    ]
   },
   {
